--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   another_flushbar: ^1.12.30
   flutter_riverpod: ^2.6.1
+  intl: ^0.20.0
 
 dev_dependencies:
   flutter_test:
