--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   another_flushbar: ^1.12.30
   flutter_riverpod: ^2.6.1
   intl: ^0.20.0
+  pdf: ^3.11.1
+  path_provider: ^2.1.5
+  open_file:
 
 dev_dependencies:
   flutter_test:
